--- a/Report_.ipynb
+++ b/Report_.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Descirption of algorithm\n",
+    "## Description of algorithm\n",
     "\n",
     "The implementation contains an Actor Citic model where the actor is a fully connected linear model (_Actor_-class) with two hidden layers (256 and 128 units, respectively).The hidden layers are connected via a ReLu activation function while the final output layer uses tanh to yield an action-space sized output. The input layer receives the current state of both agents and thus has 48 units.\n",
     "The critic model (_Critic_-class) similarly consists of two hidden layers with 256 and 128 units. The main difference is the concatination with the action vector, the output size (1) and the use of batch normalization on the first layer only.\n",
